2010-03-06  Noel O'Boyle

	* src/formats/inchiformat.cpp, mdlformat.cpp: Moved warning about 0D
	from InChI to MDL where it should have been in the first place.

2010-03-05  Tim Vandermeersch

        * test/files/stereo/*: Add test structures from Razinger paper.

        * include/openbabel/graphsym.h, src/graphsym.cpp: Add parameter for 
        NOT taking stereochemistry into account.

        * test/graphsymtest.cpp: Use added files for unit testing (i.e. check 
        if the right number of symmetry classes are found). Also, the unit 
        test was using std::unique wrong (without sorting first), the two 
        failing test cases now pass. The is a new failing test though:
        test/files/stereo/razinger_fig7_1.mol All atoms get the same symmetry 
        class, it is a very simple structure though...

2010-03-05  Noel O'Boyle

	* CMakeLists.txt: Require GCC >=4.2 for visibility support

2010-03-04  Noel O'Boyle

	* test/files/testsym_2Dtests.sdf: Forgot to add test file

	* src/stereo/perception.cpp: In TetrahedralFrom3D, if a bond to the
	chiral center IsWedgeOrHash then make the stereo object unspecified.
	* src/builder.cpp: Fix logic when correcting cistrans stereo
	* test/testsym.py: The long-promised stereo tests that flushed out
	the two bugs above. Also, since it seems that each call to 'babel' is
	quite slow, I've bundled multiple SMILES into each call.
	* test/CMakeLists.txt: Simplified the logic surrounding the Python tests
	* test/testbabel.py: Added convenience function for finding test files

2010-03-04  Tim Vandermeersch

        * include/openbabel/stereo/stereo.h, src/stereo/facade.cpp: Add support
        for square-planar stereochemistry to OBStereoFacade.

        * src/formats/smilesformat.cpp: Add support for reading/writing 
        square-planar stereochemistry (@SP1, @SP2, @SP3).

        * test/smilestest.cpp: Add unit tests for smiles square-planar 
        reading/writing.

2010-03-03  David Lonie  <loniedavid@gmail.com>
